+Add a VenueSearch activity, list adapter, etc. +Speed up the tips list view by pre-caching the html tip content. +Add a /api/venues captture.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,7 @@
   <string
     name="venue_info_activity_name">Info</string>
   <string
+    name="venue_search_activity_name">Search</string>
+  <string
     name="venue_yelp_activity_name">Yelp!</string>
 </resources>
