--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
   <string
     name="app_name">Foursquared</string>
   <string
+    name="preference_activity_name">Preferences!</string>
+  <string
     name="venue_checkin_activity_name">Check-In</string>
   <string
     name="venue_info_activity_name">Info</string>
