+Put tips in their proper place -- their own tab.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,6 +11,8 @@
   <string
     name="venue_search_activity_name">Foursquare Search</string>
   <string
+    name="venue_tips_activity_name">Foursquare Tips</string>
+  <string
     name="venue_yelp_activity_name">Yelp!</string>
 
   <string
