--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string
-    name="app_name">Foursquared</string>
+    name="app_name">Foursquared!</string>
   <string
     name="preference_activity_name">Preferences!</string>
   <string
