+Add the preferences menu item to all menus.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,9 @@
     name="venue_yelp_activity_name">Yelp!</string>
 
   <string
+    name="preferences_label">Preferences</string>
+
+  <string
     name="refresh_label">Refresh</string>
   <string
     name="nearby_label">Nearby</string>
