First support of oAuth in Foursquared UI.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -19,6 +19,8 @@
 
   <string
     name="preferences_label">Preferences</string>
+  <string
+    name="clear_prefs_label">Reset Credentials</string>
 
   <string
     name="checkins_label">Checkins</string>
