Integrate UserActivity into SearchVenueActivity provide cool Badge dialog.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,6 +25,8 @@
   <string
     name="checkins_label">Checkins</string>
   <string
+    name="me_label">My Info</string>
+  <string
     name="nearby_label">Nearby</string>
   <string
     name="refresh_label">Refresh</string>
