--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,6 +3,8 @@
   <string
     name="app_name">Foursquared!</string>
   <string
+    name="add_venue_activity_name">Add a New Venue</string>
+  <string
     name="checkins_activity_name">Foursquare Checkins</string>
   <string
     name="preference_activity_name">Preferences!</string>
