--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,6 +23,12 @@
     name="clear_prefs_label">Reset Credentials</string>
 
   <string
+    name="add_venue_label">Add Venue</string>
+
+  <string
+    name="refresh_address_label">Refresh Address</string>
+
+  <string
     name="checkins_label">Checkins</string>
   <string
     name="me_label">My Info</string>
