--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,6 +9,8 @@
   <string
     name="preference_activity_name">Preferences!</string>
   <string
+    name="tips_activity_name">Tips!</string>
+  <string
     name="venue_checkin_activity_name">Check-In</string>
   <string
     name="venue_info_activity_name">Info</string>
