Update app name to "Foursquare" (from "Foursquared")
committer: Joe LaPenna <joe@joelapenna.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <string
-    name="app_name">Foursquared!</string>
+    name="app_name">Foursquare</string>
   <string
     name="add_venue_activity_name">Add a New Venue</string>
   <string
