Add new "add tip" dialog instead of buttons on the info tab. Disable it.
committer: Joe LaPenna <joe@joelapenna.com>

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -45,5 +45,8 @@
 
   <string
     name="search_hint">Search for something...</string>
+    
+    <string
+    name="tip_add_spinner_prompt">Select a List</string>
 
 </resources>
