--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -22,7 +22,7 @@
   <string
     name="preferences_label">Preferences</string>
   <string
-    name="clear_prefs_label">Reset Credentials</string>
+    name="login_label">Login</string>
 
   <string
     name="add_venue_label">Add Venue</string>
