Bring tips to front of venues activity. Better and more accurate icons for menus and tabs
committer: Joe LaPenna <joe@joelapenna.com>

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -33,7 +33,7 @@
   <string
     name="checkins_label">Friends</string>
   <string
-    name="me_label">My Info</string>
+    name="myinfo_label">My Info</string>
   <string
     name="nearby_label">Nearby</string>
   <string
