Set name of search venues activity to "Foursquare Venues"

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   <string
     name="venue_info_activity_name">Foursquare Venue</string>
   <string
-    name="venue_search_activity_name">Foursquare Search</string>
+    name="venue_search_activity_name">Foursquare Venues</string>
   <string
     name="venue_tips_activity_name">Foursquare Tips</string>
 
