Provide the ability for the shout activity to simply shout instead of checkin.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -11,6 +11,8 @@
   <string
     name="shout_activity_label">Foursquare Checkin</string>
   <string
+    name="shout_no_venue_activity_label">Foursquare Shout</string>
+  <string
     name="tips_activity_label">foursquare Venue Tips</string>
   <string
     name="venue_checkin_activity_label">Foursquare Venue Check-In</string>
