Don't show blank space if no mayor for a venue is found.  Fixes issue 66 Don't show recent checkins divider if there are none.  Fixes issue 67 Explain there are no tips in tips activity when count == 0.  Fixes issue 68

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -96,5 +96,13 @@
   <string
     name="title_search_inprogress">Searching "%s" - Foursquare</string>
 
+  <string
+    name="no_checkins_be_the_first">No checkins here yet, be the first!</string>
+  <string
+    name="no_tips_be_the_first">No tips here yet, be the first to add one!</string>
+
+  <string
+    name="loading">Loading...</string>
+
 
 </resources>
