--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -100,6 +100,10 @@
     name="no_checkins_be_the_first">No checkins here yet, be the first!</string>
   <string
     name="no_tips_be_the_first">No tips here yet, be the first to add one!</string>
+  <string
+    name="no_friend_checkins">No recent friend checkins. Find cooler friends!</string>
+  <string
+    name="no_nearby_venues">No nearby venues!</string>
 
   <string
     name="loading">Loading...</string>
