fixes issue 43 for PreferencesActivity

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -110,5 +110,11 @@
   <string
     name="loading">Loading...</string>
 
+  <string
+     name="preferences_updating_city_toast">Updating your city.</string>
+  <string
+     name="preferences_welcome_city_toast">Welcome to %s!</string>
+  <string 
+     name="preferences_unable_to_find_city_toast">Unable to update your city.</string>
 
 </resources>
