Renamed the "venues_label" in strings.xml to the more appropriate name "Map" and added an icon so "Checkin" and "Shout" don't share an icon

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -60,7 +60,7 @@
   <string
     name="map_label">Map</string>
   <string
-    name="venues_label">Venues</string>
+    name="venues_label">Map</string>
 
   <string
     name="venues_search_label">Venue Search</string>
