--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -61,6 +61,8 @@
     name="map_label">Map</string>
   <string
     name="venues_label">Map</string>
+  <string
+    name="search_venues_label">Venues</string>
 
   <string
     name="venues_search_label">Venue Search</string>
