All a user to call a venue from the venue screen.
Fixes issue 95

--- a/main/res/values-nl/strings.xml
+++ b/main/res/values-nl/strings.xml
@@ -157,6 +157,11 @@
   <string
     name="password">Password</string>
 
+  <string
+    name="add_a_tip">Add a Tip</string>
+
+  <string
+    name="call">Call</string>
 
   -->
 
