--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -156,4 +156,10 @@
   <string
     name="password">Password</string>
 
+  <string
+    name="add_a_tip">Add a Tip</string>
+
+  <string
+    name="call">Call</string>
+
 </resources>
