Cleanup and refactor the way Android launches the LoginActivity. Make sure we have LOGGED_OUT recievers on all our activities.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -156,6 +156,8 @@
   <string
     name="phone_number">Phone Number</string>
   <string
+    name="phone_number_or_username">Phone or Username</string>
+  <string
     name="password">Password</string>
 
   <string
