--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -156,7 +156,7 @@
   <string
     name="phone_number">Phone Number</string>
   <string
-    name="phone_number_or_username">Phone or Username</string>
+    name="phone_number_or_email">Phone or Email</string>
   <string
     name="password">Password</string>
 
