v0 of the Foursquare widget.

--- a/main/res/values-nl/strings.xml
+++ b/main/res/values-nl/strings.xml
@@ -163,6 +163,9 @@
   <string
     name="call">Call</string>
 
+  <string
+    name="specialdeals_appwidget_label">Foursquare Special Deal</string>
+
   -->
 
 </resources>
