--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -166,4 +166,7 @@
   <string
     name="call">Call</string>
 
+  <string
+    name="specialdeals_appwidget_label">Foursquare Special Deal</string>
+
 </resources>
