--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -167,6 +167,6 @@
     name="call">Call</string>
 
   <string
-    name="specialdeals_appwidget_label">Foursquare Special Deal</string>
+    name="specialdeals_appwidget_3x3_label">Foursquare Friends (3x3)</string>
 
 </resources>
