--- a/main/res/values-nl/strings.xml
+++ b/main/res/values-nl/strings.xml
@@ -169,6 +169,8 @@
   <string
     name="friends_appwidget_3x3_label">Foursquare Friends (3x3)</string>
 
+  <string
+    name="friends_appwidget_footer_text">Updated %s</string>
   -->
 
 </resources>
