--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -169,4 +169,7 @@
   <string
     name="friends_appwidget_3x3_label">Foursquare Friends (3x3)</string>
 
+  <string
+    name="friends_appwidget_footer_text">Last Updated %s</string>
+
 </resources>
