Prevent user from logging in if they don't have a location provider enabled.

--- a/main/res/values-nl/strings.xml
+++ b/main/res/values-nl/strings.xml
@@ -171,6 +171,10 @@
 
   <string
     name="friends_appwidget_footer_text">Updated %s</string>
+
+  <string
+    name="no_location_providers">Unable to determine location. Please Enable GPS or Network Location</string>
+
   -->
 
 </resources>
