--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -172,4 +172,7 @@
   <string
     name="friends_appwidget_footer_text">Last Updated %s</string>
 
+  <string
+    name="no_location_providers">Unable to determine location. Please Enable GPS or Network Location</string>
+
 </resources>
