Show a "please login" message on widget if the user has not logged in yet.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -168,9 +168,10 @@
 
   <string
     name="friends_appwidget_3x3_label">Foursquare Friends (3x3)</string>
-
   <string
     name="friends_appwidget_footer_text">Last Updated %s</string>
+  <string
+    name="friends_appwidget_not_logged_in">Please log in.</string>
 
   <string
     name="no_location_providers">Unable to determine location. Please Enable GPS or Network Location</string>
