Issue 155 nearby venue specials. We don't have clear UI for this, so it doesn't look polished.

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -178,6 +178,8 @@
   <string
     name="checkin_specials">Specials</string>
   <string
+    name="checkin_specials_nearby">Nearby Venues that have Specials</string>
+  <string
     name="c">Checked in @ </string>
   <string
     name="checkin_title_shouted">Shouted!</string>
