--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -222,9 +222,9 @@
    <string
     name="preferences_share_summary_off">By default, don't tell my friends when I check-in.</string>
    <string
-    name="preferences_advanced_settings">Advanced Settings</string>
+    name="preferences_additional_settings">Additional Settings</string>
    <string
-    name="preferences_advanced_settings_summary">Modify advanced settings with foursquare.com.</string>
+    name="preferences_additional_settings_summary">Modify additional settings with foursquare.com.</string>
    <string
     name="preferences_twitter_checkin_title">Tell Twitter</string>
    <string
