Tilted crown for mayor section of checkin dialog

--- a/main/res/values/strings.xml
+++ b/main/res/values/strings.xml
@@ -170,7 +170,7 @@
   <string
     name="checkin_score">Your Check-in score</string>
   <string
-    name="checkin_totals">Totals:</string>
+    name="checkin_totals">Total:</string>
   <string
     name="checkin_points">Points</string>
   <string
